# EzDiscord

./: README.md  README.rst  TODO.MD  pyproject.toml
ezdiscord/: client.py
src/: __init__.py
