[build-system]
requires= ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "2024.0.0.1"
name = "ezdiscord"
authors = [
    {name = "pymoji-dev", email = "pycharmdudeig@gmail.com"},
    {name="DarsheeeGamer", email = "cleaverdeath@gmail.com"},
]
description = "An easier version of discord.py"
readme = "README.rst"
keywords = ["discord","bot","easy"]
requires-python = ">= 3.8"
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Developers",
               "License :: Creative Commons Zero",
               "Topic :: Bot Developers :: discord",]
[project.urls]
Github = "https://github.com/DarsheeeGamer/EzDiscord"
Issues = "https://github.com/DarsheeeGamer/EzDiscord/issues"
Discord = "https://discord.gg/nrdN6nQ2CC"

